force-app/main/default/objects/Pet__c/fields/Animal_Age__c.field-meta.xml
<CustomField>
    <fullName>Animal_Age__c</fullName>
    <label>Animal Age</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Animal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puppy (5-8 months old)</fullName>
            </value>
            <value>
                <fullName>Kitten (5-8 months old)</fullName>
            </value>
            <value>
                <fullName>Junior (1-2 years old)</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Egg (0-65 days)</fullName>
            </value>
            <value>
                <fullName>Juvenile (0-10 years)</fullName>
            </value>
            <value>
                <fullName>Adolescent (10-20 years)</fullName>
            </value>
            <value>
                <fullName>Adult (20+ years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>