force-app/main/default/objects/Pet__c/fields/Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>Animal_Type__c</fullName>
    <label>Animal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Type</valueSetName>
    </valueSet>
</CustomField>