force-app/main/default/objects/Pet__c/fields/Up_For_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Up_For_Adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to dignify which Pet is up for adoption. It should be directly related to the record type.</inlineHelpText>
    <label>Up For Adoption</label>
    <type>Checkbox</type>
</CustomField>