force-app/main/default/objects/Pet__c/recordTypes/Adoption.recordType-meta.xml
<RecordType>
    <fullName>Adoption</fullName>
    <active>true</active>
    <label>Adoption</label>
</RecordType>