force-app/main/default/objects/Pet__c/recordTypes/Pet.recordType-meta.xml
<RecordType>
    <fullName>Pet</fullName>
    <active>true</active>
    <label>Pet</label>
</RecordType>