force-app/main/default/objects/Pet__c/listViews/Client_Pet.listView-meta.xml
<ListView>
    <fullName>Client_Pet</fullName>
    <columns>NAME</columns>
    <columns>Animal_Age__c</columns>
    <columns>Animal_Type__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Up_For_Adoption__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Client Pet</label>
</ListView>