force-app/main/default/objects/Pet__c/listViews/Pets.listView-meta.xml
<ListView>
    <fullName>Pets</fullName>
    <columns>NAME</columns>
    <columns>Animal_Age__c</columns>
    <columns>Animal_Type__c</columns>
    <columns>Up_For_Adoption__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Mine</filterScope>
    <label>Pets</label>
</ListView>