force-app/main/default/objects/Pet__c/listViews/Up_For_Adoption.listView-meta.xml
<ListView>
    <fullName>Up_For_Adoption</fullName>
    <columns>NAME</columns>
    <columns>Animal_Age__c</columns>
    <columns>Animal_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Up_For_Adoption__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Up For Adoption</label>
</ListView>